Fixed text spacing on index view.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -96,3 +96,7 @@
 #menu-bar {
   margin-bottom: 20px;
 }
+
+.user-index-block h3, p {
+  margin: 0px 0px;
+}
